# aicedrone_cc

./: .gitignore
libs/qCC_io/cmake/: GDALSupport.cmake
plugins/core/Standard/qJSonRPCPlugin/src/: JsonRPCPlugin.cpp
plugins/core/Standard/qRANSAC_SD/src/: qRANSAC_SD.cpp
plugins/private/: CMakeLists.txt
plugins/private/ExamplePluginDHL/: CMakeLists.txt  ExamplePluginDHL.qrc  info.json
plugins/private/ExamplePluginDHL/include/: CMakeLists.txt  ExamplePluginDHL.h
plugins/private/ExamplePluginDHL/src/: ActionA.cpp  CMakeLists.txt  ExamplePluginDHL.cpp
plugins/private/qAicedroneTools/: CMakeLists.txt  info.json  install_debug_depends.bat  install_release_depends.bat  qAicedroneTools.qrc
plugins/private/qAicedroneTools/images/: presentation.odp
plugins/private/qAicedroneTools/include/: CMakeLists.txt  ccClassificationModel.h  ccClassificationToolCGAL.h  ccColorStyledDelegate.h  ccMouseCircle.h  ccPointCloudTilesFileDlg.h  ccToolsClassificationHelper.h  ccToolsETHZRandomForest.h  ccToolsManualClassificationDlg.h  ccToolsRandomForestClassificationDefinitions.h  ccToolsRandomForestClassificationDlg.h  qAicedroneTools.h  qToolsAboutDlg.h  qToolsDefinitions.h
plugins/private/qAicedroneTools/include/20230112/: ccClassificationModel.h  ccClassificationToolCGAL.h  ccToolsClassificationHelper.h  ccToolsETHZRandomForest.h
plugins/private/qAicedroneTools/include/ethz_rforest/: url.txt
plugins/private/qAicedroneTools/include/ethz_rforest/random-forest/: common-libraries.hpp  node-gini.hpp  tree.hpp
plugins/private/qAicedroneTools/include/libParameters/: qAicedroneToolsParametersRFC.xml
plugins/private/qAicedroneTools/src/: CMakeLists.txt  ccClassificationModel.cpp  ccClassificationToolCGAL.cpp  ccColorStyledDelegate.cpp  ccMouseCircle.cpp  ccPointCloudTilesFileDlg.cpp  ccToolsClassificationHelper.cpp  ccToolsETHZRandomForest.cpp  ccToolsManualClassificationDlg.cpp  ccToolsRandomForestClassificationDlg.cpp  qAicedroneTools.cpp  qToolsAboutDlg.cpp
plugins/private/qAicedroneTools/src/20230112/: ccClassificationModel.cpp  ccClassificationToolCGAL.cpp  ccToolsETHZRandomForest.cpp
plugins/private/qAicedroneTools/ui/: CMakeLists.txt  ccPointCloudTilesFileDlg.ui  ccPointCloudTilesFileDlg_20230515.ui  ccToolsManualClassificationDlg.ui  ccToolsRandomForestClassificationDlg.ui  qToolsAboutDlg.ui
plugins/private/qTidopTools/: CMakeLists.txt  info.json  install_debug_depends.bat  install_release_depends.bat  qTidopTools.qrc
plugins/private/qTidopTools/include/: CMakeLists.txt  ccClassificationModel.h  ccClassificationToolCGAL - copia.h  ccClassificationToolCGAL.h  ccColorStyledDelegate.h  ccMouseCircle.h  ccTidopToolsManualClassificationDlg_20221219.h  ccTidopToolsRandomForestClassificationDlg_20221223.h  ccToolsClassificationHelper.h  ccToolsETHZRandomForest.h  ccToolsManualClassificationDlg.h  ccToolsRandomForestClassificationDefinitions.h  ccToolsRandomForestClassificationDlg.h  qTidopTools.h  qToolsAboutDlg.h  qToolsDefinitions.h
plugins/private/qTidopTools/include/ethz_rforest/random-forest/: IO_Binary.hpp  forest.hpp  node.hpp
plugins/private/qTidopTools/src/: CMakeLists.txt  ccClassificationModel.cpp  ccClassificationToolCGAL - copia.cpp  ccClassificationToolCGAL.cpp  ccColorStyledDelegate.cpp  ccMouseCircle.cpp  ccTidopToolsManualClassificationDlg_20221219.cpp  ccTidopToolsRandomForestClassificationDlg_20221223.cpp  ccToolsClassificationHelper.cpp  ccToolsETHZRandomForest.cpp  ccToolsManualClassificationDlg.cpp  ccToolsRandomForestClassificationDlg.cpp  qTidopTools.cpp  qToolsAboutDlg.cpp
plugins/private/qTidopTools/ui/: CMakeLists.txt  ccTidopToolsManualClassificationDlg_20221219.ui  ccTidopToolsManualClassificationDlg_original.ui  ccTidopToolsRandomForestClassificationDlg_20221223.ui  ccToolsManualClassificationDlg.ui  ccToolsRandomForestClassificationDlg.ui  qToolsAboutDlg.ui
qCC/: CMakeLists.txt
qCC/ui_templates/: mainWindow.ui
